@@ -4,6 +4,7 @@ lib/OpenGL/XScreenSaver.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
+MYMETA.yml
 t/00_useok.t
 t/01_window_id.t
 XScreenSaver.xs
