@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               OpenGL-XScreenSaver
-version:            0.04
+version:            0.05
 abstract:           prepare environment for writing OpenGL-based XScreenSaver hacks
 author:  []
 license:            perl
@@ -14,7 +14,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+generated_by:       ExtUtils::MakeMaker version 6.57_05
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
