@@ -1,0 +1,21 @@
+---
+abstract: 'prepare environment for writing OpenGL-based XScreenSaver hacks'
+author: []
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+distribution_type: module
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.57_05'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: OpenGL-XScreenSaver
+no_index:
+  directory:
+    - t
+    - inc
+requires: {}
+version: 0.05
