@@ -3,7 +3,7 @@ package OpenGL::XScreenSaver;
 use strict;
 use warnings;
 
-our $VERSION = '0.04';
+our $VERSION = '0.05';
 
 require XSLoader;
 XSLoader::load('OpenGL::XScreenSaver', $VERSION);
